# darn-dmap

./: .credo.exs  .gitignore  .iex.exs  .tool-versions  Cargo.toml  README.md  mix.exs
lib/: darn_dmap.ex
lib/darn_dmap/: decode.ex  dmap_error.ex  fitacf.ex  native.ex  read.ex  safe_tensor.ex
lib/darn_dmap/native/: read_nif.ex
native/darn_dmap_nif/: Cargo.toml  README.md
native/darn_dmap_nif/src/: lib.rs
native/darn_dmap_nif/src/encode/: field.rs  mod.rs  safe_float.rs  scalar.rs  vector.rs
native/darn_dmap_nif/src/nifs/: read.rs
native/darndmap/: Cargo.toml  README.md
test/: darn_dmap_test.exs
test/fixtures/: test.fitacf  test.grid  test.iqdat  test.map  test.snd
