[package]
name = "darn_dmap_nif"
version = "0.1.0"
authors = ["Matt Caldwell"]
edition = "2021"

[lib]
name = "darn_dmap_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.4"
ndarray = "0.16"
darn-dmap = { git = "https://github.com/StoatPower/dmap.git", branch = "feature-gate-python-bindings" }
