[package]
name = "darn_dmap_nif"
version = "0.1.0"
authors = ["Matt Caldwell"]
edition = "2021"
rust-version = "1.85.1"
description = "SuperDARN DMAP file format I/O Rustler NIFs for Elixir"
repository = "https://github.com/StoatPower/darn-dmap"
keywords = ["SuperDARN", "Rustler", "Elixir"]
categories = ["parser-implementations", "science"]

[lib]
name = "darn_dmap_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.4"
darn-dmap = "0.8.1"
indexmap = "2"
paste = "1"
